[package]
name = "kvs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.4"
env_logger = "0.10.0"
failure = "0.1.8"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sled = "0.34.7"
structopt = "0.3.26"

[dev-dependencies]
assert_cmd = "2.0.11"
criterion = "0.5.1"
predicates = "3.0.3"
rand = { version = "0.8.5", features = ["small_rng"]}
tempfile = "3.6.0"
walkdir = "2.3.3"
